syntax ="proto3";

package product;

service ProductService{
  rpc Create(ProductRequest)returns (Product);
  rpc CreateType(TypeRequest)returns (Type);
  rpc CreateCategory(CategoryRequest)returns (Category);
  rpc Update (ProductRequest) returns (Product);
  rpc DeleteProduct (GetProductId) returns (Empty);
  rpc GetProduct (GetProductId) returns (Product);
  rpc GetProducts (Empty) returns (Products);
}
message Products {
  repeated Product products= 1;
}


message Empty {}

message GetProductId {
  int64 id = 1;
}
message TypeRequest{
  string name= 1;
}
message Type{
  int64 id = 1;
  string name= 2;
}
message CategoryRequest{
  string name= 1;
}
message Category{
  int64 id = 1;
  string name= 2;
}
message ProductRequest{
  string name = 1;
  int64 price=2;
  int64 categoryid = 3;
  int64 typeid = 4;
}

message Product{
  int64 id =1;
  string name = 2;
  int64 price=3;
  int64 categoryid = 4;
  int64 typeid = 5;
}